# OpenGATE

./: .gitignore  README.md  cse-gate.dvc  dsai-gate.dvc  gate_study.db  general-info.dvc  main.py  pyproject.toml
.dvc/: config
chroma_db/16a34bf7-3001-476a-8484-870b466b37d9/: index_metadata.pickle
dsai-gate/: Artificial-Intelligence-Readme.md  Calculus-and-Optimization-Readme.md  Database-Management-Readme.md  Linear-Algebra-Readme.md  Machine-Learning-Readme.md  Probability-Statistics-Readme.md  Programming-and-Algorithms-Readme.md  README.md  Resources.md
dsai-gate/Interview/: MLOPs.md  ML_Fundamentals.md
dsai-gate/PYQ/: README.md  SHA256SUMS
dsai-gate/docs/: agent.md  future_directions.md  implementation_plan.md  official-resources.md  stale-links.md
dsai-gate/notebooks/: PRML-README.md  README.md
dsai-gate/notebooks/algorithms/: binary_search_and_complexity.ipynb
dsai-gate/notebooks/linear_algebra/: projections_and_pca.ipynb
dsai-gate/notebooks/machine_learning/: kmeans_from_scratch.ipynb  linear_regression_from_scratch.ipynb  logistic_classification.ipynb
dsai-gate/notebooks/probability/: conditional_probability_and_bayes.ipynb
src/: curriculum.py  database.py  main.py  parser.py
src/agent/: __init__.py  database.py  graph.py  ingest.py  test_manager.py  tools.py
src/static/: app.js  styles.css
src/templates/: index.html  welcome.html
static/: app.js  styles.css
templates/: index.html  welcome.html
