[project]
name = "gate-mentor-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "jinja2>=3.1.0",
    "dagshub>=0.7.0",
    "dvc>=3.67.1",
    "dvc-s3>=3.3.0",
    "langgraph>=1.2.6",
    "langchain>=1.3.10",
    "chromadb>=1.5.9",
    "sentence-transformers>=5.6.0",
    "pymupdf>=1.27.2.3",
    "duckduckgo-search>=8.1.1",
    "sympy>=1.14.0",
    "langchain-google-genai>=4.2.5",
    "langchain-anthropic>=1.4.6",
    "langchain-openai>=1.3.2",
    "mlflow>=3.14.0",
]

